--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -6,7 +6,7 @@
           <a href="./index.html">Home</a>
         </li>
         <li class="nav-item library">
-          <a href="./library.html">My Library</a>
+          <a href="./library.html" style="color: currentColor">My Library</a>
         </li>
       </ul>
     </nav>
