--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,27 +1,40 @@
 .header {
   margin: 20px;
   text-align: center;
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.4) 65.37%), url('/src/images/background_phone.jpg');
+  background-image: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.4) 65.37%
+    ),
+    url('/src/images/background_phone.jpg');
   background-repeat: no-repeat;
   border-radius: 10px;
-//transform: matrix(-1, 0, 0, 1, 0, 0);
+
   background-position: center;
   background-size: cover;
-  
 
   @media screen and (min-width: 768px) {
-    background-image: linear-gradient(273.67deg, rgba(0, 0, 0, 0.49) -2.09%, rgba(0, 0, 0, 0) 99.83%), url('/src/images/background_tablet.jpg');
+    background-image: linear-gradient(
+        273.67deg,
+        rgba(0, 0, 0, 0.49) -2.09%,
+        rgba(0, 0, 0, 0) 99.83%
+      ),
+      url('/src/images/background_tablet.jpg');
     border-radius: 15px;
-    //transform: matrix(-1, 0, 0, 1, 0, 0);
+
     margin: 32px;
   }
 
   @media screen and (min-width: 1280px) {
-    background-image: linear-gradient(273.67deg, rgba(0, 0, 0, 0.49) -2.09%, rgba(0, 0, 0, 0) 99.83%), url('/src/images/background_desktop.jpg');
+    background-image: linear-gradient(
+        273.67deg,
+        rgba(0, 0, 0, 0.49) -2.09%,
+        rgba(0, 0, 0, 0) 99.83%
+      ),
+      url('/src/images/background_desktop.jpg');
     border-radius: 15px;
-//transform: matrix(-1, 0, 0, 1, 0, 0);
-margin: 12px 32px 52px 32px;
 
+    margin: 12px 32px 52px 32px;
   }
 
   & a {
@@ -34,7 +47,6 @@ margin: 12px 32px 52px 32px;
   padding: 14px 14px 24px 14px;
   height: 460px;
 
-
   @media screen and (min-width: 768px) {
     position: relative;
     width: 768px;
@@ -43,7 +55,6 @@ margin: 12px 32px 52px 32px;
   }
 
   @media screen and (min-width: 1280px) {
-
     width: 1216px;
     height: 316px;
     padding: 16px 32px 32px 32px;
@@ -52,11 +63,10 @@ margin: 12px 32px 52px 32px;
 
 .form {
   position: relative;
- 
+
   width: 100%;
-  
+
   height: 34px;
-  
 
   background: $white-color;
   border-radius: 100px;
@@ -80,13 +90,10 @@ margin: 12px 32px 52px 32px;
 }
 
 .header_search-input {
-  //width: 100%;
-  //display: block;
   background-color: transparent;
   width: 252px;
   height: 100%;
   padding-left: 14px;
-  //top: 10px;
 
   font-family: 'Roboto';
   font-style: normal;
@@ -94,30 +101,19 @@ margin: 12px 32px 52px 32px;
   font-size: 12px;
   line-height: 1.67;
 
-  //display: flex;
-
   color: $black-color;
   border: none;
-  // transition: border-bottom $transition-timing $transition-function;
 
   &:focus-visible {
     outline: none;
   }
 
   @media screen and (min-width: 768px) {
-    //width: 85px;
-    // height: 16px;
-    //left: 32px;
-    //top: 27px;
     font-size: 14px;
     line-height: 1.14;
   }
 
   @media screen and (min-width: 1280px) {
-    //width: 84px;
-    //height: 16px;
-    // left: 48px;
-    // top: 29px;
     font-size: 14px;
     line-height: 1.14;
   }
@@ -126,15 +122,12 @@ margin: 12px 32px 52px 32px;
 .header_search-btn {
   position: absolute;
   content: '';
-  //padding-right: 14px;
-  //padding-bottom: 10px;
+
   width: 14px;
   height: 14px;
   right: 14px;
   bottom: 10px;
 
-  //transition: border-bottom $transition-timing $transition-function;
-  //display: inline-flex;
   background-color: transparent;
   border: none;
 
@@ -152,9 +145,8 @@ margin: 12px 32px 52px 32px;
 .header_search-btn_icon {
   width: 14px;
   height: 14px;
-  // color: $black-color;
+
   fill: $black-color;
-  //transition: transform $transition-timing $transition-function;
 
   // &:hover {
   //   transform: scale(1.15);
@@ -177,12 +169,6 @@ margin: 12px 32px 52px 32px;
   margin-bottom: 8px;
   gap: 4px;
 
-  // position: absolute;
-  // width: 204px;
-  // height: 34px;
-  // left: 14px;
-  // top: 14px;
-
   @media screen and (min-width: 768px) {
     position: absolute;
     content: '';
@@ -191,9 +177,8 @@ margin: 12px 32px 52px 32px;
   }
 
   @media screen and (min-width: 1280px) {
-    
-     left: 227px;
-   
+    left: 227px;
+
     padding: 0px;
     gap: 8px;
   }
@@ -274,6 +259,8 @@ margin: 12px 32px 52px 32px;
   }
 }
 
+
+
 .add-films {
   display: flex;
   align-items: center;
@@ -282,14 +269,9 @@ margin: 12px 32px 52px 32px;
   margin-top: 16px;
 
   @media screen and (min-width: 768px) {
-    //position: absolute;
-    //content: '';
-   // right: 32px;
-  //  top: 16px;
-  margin: 0;
- justify-content: left;
-  margin-left: 480px;
-   
+    margin: 0;
+    justify-content: left;
+    margin-left: 480px;
   }
 
   @media screen and (min-width: 1280px) {
@@ -320,13 +302,10 @@ margin: 12px 32px 52px 32px;
   color: $white-color;
 
   &:hover,
-    &:focus {
-        background-color: $white-color;
-        color: $red-color;
-        
-    }
-
-    
+  &:focus {
+    background-color: $white-color;
+    color: $red-color;
+  }
 
   @media screen and (min-width: 768px) {
     padding: 12px 23px;
@@ -363,9 +342,8 @@ margin: 12px 32px 52px 32px;
 
   &:hover,
   &:focus {
-      background-color: $red-color;
-      color: $white-color;
-      
+    background-color: $red-color;
+    color: $white-color;
   }
 
   @media screen and (min-width: 768px) {
@@ -379,13 +357,8 @@ margin: 12px 32px 52px 32px;
   }
 }
 
-//$transition-timing: 250ms;
-//$transition-function: cubic-bezier(0.4, 0, 0.2, 1);
-
 .header-logo {
   margin-top: 258px;
-  // position: relative;
-  //display: flex;
 
   @media screen and (min-width: 768px) {
     position: absolute;
@@ -402,57 +375,25 @@ margin: 12px 32px 52px 32px;
 }
 
 .header_logo-link {
-  // display: flex;
   align-items: center;
-  // position: relative;
-  // content: "";
-  // left: 5px;
-  // top: 5px;
-  // display: inline-flex;
-  // align-items: center;
-  // margin: 0;
-  //color: $white-color;
-  //background-color: transparent;
-
-  // transition: color $transition-timing $transition-function;
-
-  // &:hover,
-  //   &:active {
-  //  color: rgb(202, 191, 191);
-  //  }
-
-  //&:hover .header_logo-icon {
-  //   transform: rotate(0.5turn);
-  // fill: #FF001B;
-  //}
 }
 
 .header_logo-icon {
   width: 32px;
   height: 32px;
 
-  // position: absolute;
-  //  content: "";
-  //  left: 5px;
-  //  top: 5px;
-  //fill: $white-color;
-  // transition: transform $transition-timing $transition-function;
-
   @media screen and (min-width: 768px) {
     width: 32px;
-  height: 32px;
+    height: 32px;
   }
 
   @media screen and (min-width: 1280px) {
     width: 59px;
-  height: 59px;
-  
+    height: 59px;
   }
-
 }
 
 .header-nav_logo-text {
-
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
@@ -466,7 +407,6 @@ margin: 12px 32px 52px 32px;
   }
 
   @media screen and (min-width: 1280px) {
-    
     font-size: 64px;
   }
 }
