--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,6 +1,6 @@
 
-<div class="container">
-  <div class="movie__modal is-hidden" data-modal-about>
+<div class="container modal">
+  <div class="movie__modal   is-hidden" data-modal-about>
     <button class="movie__close" data-modal-about-close>
       <svg class="icon-close" width="30" height="30">
         <use href="./images/sprite.svg#close"></use>
@@ -13,4 +13,4 @@
   </div>
 </div>
 
-<script defer type="module" src="./js/modal.js"></script>
+
