--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -10,9 +10,9 @@
   min-width: 280px;
   /* width: 100%; */
   height: 95%;
-  /* max-width: 280px; */
+  //  max-width: 280px; 
   padding: 40px 15px;
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -55,6 +55,10 @@ img {
 }
 
 //   Кнопки
+.btn {
+  @media screen and (min-width: 280px) {
+    text-align: center;
+}}
 
 button {
   color: $red-color;
@@ -64,18 +68,22 @@ button {
   font-weight: 500;
   font-size: 12px;
   line-height: 14.06px;
-  padding: 10px 10px;
+
+
+  text-align: center;
+
+  padding: 0px;
   width: 111px;
   height: 34px;
   margin-top: 20px;
   @media screen and (min-width: 768px) {
     height: 38px;
-    padding: 12px 16px;
+    // padding: 12px 16px;
     width: 119px;
   }
   @media screen and (min-width: 1280px) {
     height: 42px;
-    padding: 14px 24px;
+    // padding: 14px 24px;
     width: 134px;
   }
 }
@@ -83,16 +91,18 @@ button {
 .movie__add {
   color: #ffffff;
   background-color: $red-color;
-  padding: 10px 8px;
+  padding: 0;
+  
+  text-align: center;
   width: 125px;
   margin-right: 2px;
   margin-top: 20px;
   @media screen and (min-width: 768px) {
-    padding: 12px 16px;
-    width: 137px;
+    // padding: 12px 0px;
+    width: 158px;
   }
   @media screen and (min-width: 1280px) {
-    padding: 14px 32px;
+    // padding: 14px 0px;
     width: 167px;
     margin-right: 10px;
   }
@@ -151,7 +161,12 @@ button {
 
 .movie__detals--key {
   color: #8c8c8c;
+  max-width: 120px;
 }
+.movie__detals--value {
+  @media screen and (min-width: 280px) {
+  max-width: 130px;
+}}
 
 .info-item,
 .info-key,
@@ -185,10 +200,12 @@ button {
   /* justify-content: center; */
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   gap: 10px;
   list-style: none;
   margin-bottom: 20px;
   @media screen and (min-width: 768px) {
+    justify-content: space-around;
     gap: 68px;
   }
   @media screen and (min-width: 1280px) {
@@ -216,25 +233,25 @@ button {
 // }
 // }
 
-.backdrop-about {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, .2);
-    z-index: 20;
-    transition: .3s all;
+// .backdrop-about {
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     background-color: rgba(0, 0, 0, .2);
+//     z-index: 1000;
+//     transition: .3s all;
 
-    // transition: opacity 250ms linear,
-    //     visibility 250ms linear;
+//     // transition: opacity 250ms linear,
+//     //     visibility 250ms linear;
 
-  &.is-hidden {
-        opacity: 0;
-        pointer-events: none;
+//   &.is-hidden {
+//         opacity: 0;
+//         pointer-events: none;
 
-    }
-}
+//     }
+// }
 
 // .movie__modal.is-open {
 //     opacity: 1;
