--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -10,9 +10,9 @@
   min-width: 280px;
   /* width: 100%; */
   height: 95%;
-  //  max-width: 280px; 
+  //  max-width: 280px;
   padding: 40px 15px;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -24,7 +24,7 @@
   background-color: #ffffff;
   border-radius: 10px;
 
-  //  transition: transform 250ms ease-in-out; 
+  //  transition: transform 250ms ease-in-out;
 
   @media screen and (min-width: 768px) {
     height: auto;
@@ -58,7 +58,8 @@ img {
 .btn {
   @media screen and (min-width: 280px) {
     text-align: center;
-}}
+  }
+}
 
 button {
   color: $red-color;
@@ -68,7 +69,6 @@ button {
   font-weight: 500;
   font-size: 12px;
   line-height: 14.06px;
-
 
   text-align: center;
 
@@ -92,7 +92,7 @@ button {
   color: #ffffff;
   background-color: $red-color;
   padding: 0;
-  
+
   text-align: center;
   width: 125px;
   margin-right: 2px;
@@ -165,8 +165,9 @@ button {
 }
 .movie__detals--value {
   @media screen and (min-width: 280px) {
-  max-width: 130px;
-}}
+    max-width: 130px;
+  }
+}
 
 .info-item,
 .info-key,
@@ -181,7 +182,7 @@ button {
 .movie__card {
   text-align: start;
   //    justify-content: center;
-   display: block;
+  display: block;
   list-style: none;
   font-weight: 500;
   font-size: 12px;
@@ -215,13 +216,12 @@ button {
 .movie__info {
   @media screen and (min-width: 768px) {
     // display: block;
-  max-width: 300px;
+    max-width: 300px;
   }
   @media screen and (min-width: 1280px) {
-   max-width: 375px;
+    max-width: 375px;
   }
 }
-
 
 // .video {
 //     width: 100%
