--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -233,29 +233,29 @@ button {
 // }
 // }
 
-// .backdrop-about {
-//     position: fixed;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     background-color: rgba(0, 0, 0, .2);
-//     z-index: 1000;
-//     transition: .3s all;
+.backdrop-about {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .2);
+    z-index: 20;
+    transition: .3s all;
 
-//     // transition: opacity 250ms linear,
-//     //     visibility 250ms linear;
+    // transition: opacity 250ms linear,
+    //     visibility 250ms linear;
 
-//   &.is-hidden {
-//         opacity: 0;
-//         pointer-events: none;
+  &.is-hidden {
+        opacity: 0;
+        pointer-events: none;
 
-//     }
-// }
+    }
+}
 
-// .movie__modal.is-open {
-//     opacity: 1;
-//     visibility: visible;
-// }
+.movie__modal.is-open {
+    opacity: 1;
+    visibility: visible;
+}
 //     // transform: translateX(0);
 // // }
