--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -46,6 +46,7 @@
 img {
   width: 240px;
   margin-bottom: 20px;
+  border-radius: 5px;
   @media screen and (min-width: 768px) {
     width: 264px;
   }
@@ -92,7 +93,7 @@ button {
   color: #ffffff;
   background-color: $red-color;
   padding: 0;
-
+  border-color: #ffffff;
   text-align: center;
   width: 125px;
   margin-right: 2px;
@@ -149,7 +150,7 @@ button {
   height: 16px;
   color: #ffffff;
   background-color: $red-color;
-  border-radius: 5px;
+  border-radius: 5px solid #ffffff;
   padding: 1px 9px;
   margin-top: 0px;
 }
@@ -158,7 +159,9 @@ button {
   line-height: 20px;
   margin-bottom: 20px;
 }
-
+.slash {
+  color: #8c8c8c;
+}
 .movie__detals--key {
   color: #8c8c8c;
   max-width: 120px;
@@ -223,39 +226,30 @@ button {
   }
 }
 
-// .video {
-//     width: 100%
-//     height: auto
-//     @media screen and (min-width: 768px) {
-//         width: 448px;
-//         height: 205px;
-//         margin-bottom: 32px;
+
+// .backdrop-about {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     background-color: rgba(0, 0, 0, .2);
+//     z-index: 20;
+//     transition: .3s all;
+
+//     // transition: opacity 250ms linear,
+//     //     visibility 250ms linear;
+
+//   &.is-hidden {
+//         opacity: 0;
+//         pointer-events: none;
+
+//     }
 // }
+
+// .movie__modal.is-open {
+//     opacity: 1;
+//     visibility: visible;
 // }
-
-.backdrop-about {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, .2);
-    z-index: 20;
-    transition: .3s all;
-
-    // transition: opacity 250ms linear,
-    //     visibility 250ms linear;
-
-  &.is-hidden {
-        opacity: 0;
-        pointer-events: none;
-
-    }
-}
-
-.movie__modal.is-open {
-    opacity: 1;
-    visibility: visible;
-}
 //     // transform: translateX(0);
 // // }
